# clipy-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.githooks/: pre-commit
.github/workflows/: ci.yml  macos-dmg.yml
icons/: AppIcon.icns
scripts/: install-git-hooks.sh  install-macos-app-icon.sh  install-macos-app.sh  package-macos-app.sh  package-macos-dmg.sh  package-macos-release.sh
src/: clipboard.rs  gui.rs  main.rs  sensitive.rs  storage.rs
