[package]
name = "clipy-rs"
version = "0.1.0"
edition = "2024"
description = "A small macOS clipboard history tool inspired by Clipy."
license = "MIT"

[dependencies]
objc2 = { version = "0.6.3" }
objc2-app-kit = { version = "0.3.2", features = [
    "NSAlert",
    "objc2-core-foundation",
    "objc2-quartz-core",
    "NSControl",
    "NSApplication",
    "NSButton",
    "NSButtonCell",
    "NSColor",
    "NSEvent",
    "NSFont",
    "NSImage",
    "NSImageView",
    "NSMenu",
    "NSMenuItem",
    "NSPasteboard",
    "NSPopUpButton",
    "NSResponder",
    "NSRunningApplication",
    "NSScrollView",
    "NSScreen",
    "NSStatusBar",
    "NSStatusBarButton",
    "NSStatusItem",
    "NSText",
    "NSTextField",
    "NSTextView",
    "NSView",
    "NSVisualEffectView",
    "NSWindow",
] }
objc2-quartz-core = { version = "0.3.2", features = ["CALayer"] }
objc2-foundation = { version = "0.3.2", features = [
    "NSArray",
    "NSData",
    "NSDate",
    "NSNotification",
    "NSObject",
    "NSString",
    "NSTimer",
    "NSURL",
] }
