[package]
name = "clipy-rs"
version = "0.1.0"
edition = "2024"
description = "A small macOS clipboard history tool inspired by Clipy."
license = "MIT"

[dependencies]
objc2 = { version = "0.6.3" }
objc2-app-kit = { version = "0.3.2", features = [
    "NSAlert",
    "objc2-core-foundation",
    "objc2-quartz-core",
    "NSControl",
    "NSApplication",
    "NSButton",
    "NSButtonCell",
    "NSActionCell",
    "NSAttributedString",
    "NSCell",
    "NSColor",
    "NSEvent",
    "NSFont",
    "NSImage",
    "NSImageView",
    "NSStringDrawing",
    "NSMenu",
    "NSMenuItem",
    "NSPasteboard",
    "NSPopUpButton",
    "NSResponder",
    "NSRunningApplication",
    "NSScrollView",
    "NSScreen",
    "NSStatusBar",
    "NSStatusBarButton",
    "NSStatusItem",
    "NSText",
    "NSTextField",
    "NSTextView",
    "NSView",
    "NSVisualEffectView",
    "NSWindow",
    "NSWorkspace",
] }
objc2-quartz-core = { version = "0.3.2", features = ["CALayer"] }
objc2-foundation = { version = "0.3.2", features = [
    "NSArray",
    "NSAttributedString",
    "NSData",
    "NSDate",
    "NSDictionary",
    "NSNotification",
    "NSObject",
    "NSString",
    "NSTimer",
    "NSURL",
] }
